parser/src/parser/expressions/snapshots/parser__parser__expressions__field_expr__tests__parse_field_access.snap
---
source: parser/src/parser/expressions/field_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 15)
  FN_DEF@[0; 15)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    BLOCK_EXPR@[9; 15)
      BLOCK@[9; 15)
        L_CURLY@[9; 10) "{"
        EXPR_STMT@[10; 13)
          FIELD_EXPR@[10; 13)
            IDENT_EXPR@[10; 11)
              NAME@[10; 11)
                IDENT@[10; 11) "a"
            DOT@[11; 12) "."
            IDENT_EXPR@[12; 13)
              NAME@[12; 13)
                IDENT@[12; 13) "b"
        SEMI@[13; 14) ";"
        R_CURLY@[14; 15) "}"

