parser/src/parser/expressions/snapshots/parser__parser__expressions__field_expr__tests__parse_field_access_assign.snap
---
source: parser/src/parser/expressions/field_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 20)
  FN_DEF@[0; 20)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    BLOCK_EXPR@[9; 20)
      BLOCK@[9; 20)
        L_CURLY@[9; 10) "{"
        EXPR_STMT@[10; 18)
          BIN_EXPR@[10; 18)
            FIELD_EXPR@[10; 14)
              IDENT_EXPR@[10; 11)
                NAME@[10; 11)
                  IDENT@[10; 11) "a"
              DOT@[11; 12) "."
              IDENT_EXPR@[12; 14)
                NAME@[12; 14)
                  IDENT@[12; 13) "b"
                  WHITESPACE@[13; 14) " "
            EQ@[14; 15) "="
            WHITESPACE@[15; 16) " "
            LITERAL@[16; 18)
              INT_NUMBER@[16; 18) "10"
        SEMI@[18; 19) ";"
        R_CURLY@[19; 20) "}"

